--- a/tablet.css
+++ b/tablet.css
@@ -143,10 +143,28 @@
             background-color: rgb(204, 0, 255);
         }
         
-        /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-        .show {
-            display:block;
-        }
+        .show::-webkit-scrollbar {/*custom scroll bar */
+      width: 1.25rem;
+      }
+
+      .show::-webkit-scrollbar-track {
+        border-radius: 6px; 
+        box-shadow: inset 0 0 6px gray;
+      }
+
+      .show::-webkit-scrollbar-thumb {
+        border-radius: 6px;
+        background-color: rgb(204, 0, 255);
+        /*outline: 1px solid slategray;*/ 
+      }
+
+      /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+      .show {
+          display:block;
+          overflow-y: scroll;
+          box-shadow: 4px 2px 12px black;
+      }
+        
         
         .vitamin {
           margin-top: 16px;
@@ -598,10 +616,28 @@
             background-color: rgb(204, 0, 255);
         }
         
-        /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-        .show {
-            display:block;
-        }
+        .show::-webkit-scrollbar {/*custom scroll bar */
+      width: 1.25rem;
+      }
+
+      .show::-webkit-scrollbar-track {
+        border-radius: 6px; 
+        box-shadow: inset 0 0 6px gray;
+      }
+
+      .show::-webkit-scrollbar-thumb {
+        border-radius: 6px;
+        background-color: rgb(204, 0, 255);
+        /*outline: 1px solid slategray;*/ 
+      }
+
+      /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+      .show {
+          display:block;
+          overflow-y: scroll;
+          box-shadow: 4px 2px 12px black;
+      }
+        
         
         .vitamin {
           margin-top: 16px;
@@ -1053,10 +1089,28 @@
             background-color: rgb(204, 0, 255);
         }
         
-        /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-        .show {
-            display:block;
-        }
+       .show::-webkit-scrollbar {/*custom scroll bar */
+      width: 1.25rem;
+      }
+
+      .show::-webkit-scrollbar-track {
+        border-radius: 6px; 
+        box-shadow: inset 0 0 6px gray;
+      }
+
+      .show::-webkit-scrollbar-thumb {
+        border-radius: 6px;
+        background-color: rgb(204, 0, 255);
+        /*outline: 1px solid slategray;*/ 
+      }
+
+      /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+      .show {
+          display:block;
+          overflow-y: scroll;
+          box-shadow: 4px 2px 12px black;
+      }
+        
         
         .vitamin {
           margin-top: 16px;
