--- a/tablet.css
+++ b/tablet.css
@@ -162,6 +162,21 @@
         /*outline: 1px solid slategray;*/ 
       }
 
+     .show::-webkit-scrollbar {/*custom scroll bar */
+      width: 1.25rem;
+      }
+
+      .show::-webkit-scrollbar-track {
+        border-radius: 6px; 
+        box-shadow: inset 0 0 6px gray;
+      }
+
+      .show::-webkit-scrollbar-thumb {
+        border-radius: 6px;
+        background-color: rgb(204, 0, 255);
+        /*outline: 1px solid slategray;*/ 
+      }
+
       /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
       .show {
           display:block;
@@ -637,6 +652,21 @@
         /*outline: 1px solid slategray;*/ 
       }
 
+      .show::-webkit-scrollbar {/*custom scroll bar */
+      width: 1.25rem;
+      }
+
+      .show::-webkit-scrollbar-track {
+        border-radius: 6px; 
+        box-shadow: inset 0 0 6px gray;
+      }
+
+      .show::-webkit-scrollbar-thumb {
+        border-radius: 6px;
+        background-color: rgb(204, 0, 255);
+        /*outline: 1px solid slategray;*/ 
+      }
+
       /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
       .show {
           display:block;
@@ -1098,6 +1128,21 @@
         }
         
        .show::-webkit-scrollbar {/*custom scroll bar */
+      width: 1.25rem;
+      }
+
+      .show::-webkit-scrollbar-track {
+        border-radius: 6px; 
+        box-shadow: inset 0 0 6px gray;
+      }
+
+      .show::-webkit-scrollbar-thumb {
+        border-radius: 6px;
+        background-color: rgb(204, 0, 255);
+        /*outline: 1px solid slategray;*/ 
+      }
+
+      .show::-webkit-scrollbar {/*custom scroll bar */
       width: 1.25rem;
       }
 
