--- a/widescreen.css
+++ b/widescreen.css
@@ -209,6 +209,7 @@
   /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
   .show {
       display:block;
+      height: 80vh;
       overflow-y: scroll;
       box-shadow: 4px 2px 12px black;
   }
