--- a/widescreen.css
+++ b/widescreen.css
@@ -163,7 +163,7 @@
     margin-top: 15px;
     /*margin-left: 48%;*/
     display: none;
-    /*position: absolute;*/
+    position: relative;
     background-color: rgb(223, 109, 252);
     font-size: 1.25rem;
     width: 80%;
@@ -173,7 +173,7 @@
     /* min-width: 100px; */
     border-radius: 4px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 2000;
+    z-index: 200;
   }
   
   /* Links inside the dropdown */
