--- a/phone.css
+++ b/phone.css
@@ -82,8 +82,8 @@
       
       .title {
       font-size: 2.75rem;
-      padding-top: 5rem;
-      padding-bottom: .25rem;
+      padding-top: 4.2rem;
+      /*padding-bottom: .25rem;*/
       /* background-color: thistle; */
       user-select: none;
       }  
