--- a/phone.css
+++ b/phone.css
@@ -193,8 +193,9 @@
           margin-left: 5px;
           margin-right: 5px;
           /* margin-bottom: 20px; */
-          width: 220px;
+          width: 230px;
           max-width: 400px;
+          height: 45px;
           text-align: center;
           font-size: 1.5rem;
           color: white;
