--- a/phone.css
+++ b/phone.css
@@ -197,7 +197,7 @@
           max-width: 400px;
           height: 45px;
           text-align: center;
-          font-size: 1.5rem;
+          font-size: 10vw;
           color: white;
           /* padding: .25rem; */
           padding-top: .25rem;
