--- a/phone.css
+++ b/phone.css
@@ -354,12 +354,13 @@
           right: 0;
           margin: auto;
           text-align: center;
-          width: 90%;
-          /*height: 28%;*/
-          max-height: 160px;
-          min-height: 135px;
+          width: 90vw;
+          height: 35vw;
+          /*max-height: 160px;*/
+          /*min-height: 135px;*/
           /* padding: 5px; */
           margin-top: 10px;
+         margin-left: 5vw;
           /* margin-bottom: 20vh; */
           font-size: 3rem;
           color: rgb(0, 0, 0);
