--- a/phone.css
+++ b/phone.css
@@ -214,7 +214,7 @@
           top: 222px;
           border-color: transparent rgb(138, 111, 138);
           border-style: solid;
-          border-width: 25px 25px 25px 0px;
+          border-width: 6vw 6vw 6vw 0px;
           height: 0px;
           width: 0px;
          cursor: pointer;
@@ -227,7 +227,7 @@
           top: 222px;
           border-color: transparent rgb(143, 132, 143);
           border-style: solid;
-          border-width: 25px 25px 25px 0px;
+          border-width: 6.5vw 6.5vw 6.5vw 0px;
           height: 0px;
           width: 0px;
         }
@@ -281,7 +281,7 @@
           top: 222px;
           border-color: transparent rgb(138, 111, 138);
           border-style: solid;
-          border-width: 25px 0px 25px 25px;
+          border-width: 6vw 0px 6vw 6vw;
           height: 0px;
           width: 0px;
          cursor: pointer;
@@ -294,7 +294,7 @@
           top: 222px;
           border-color: transparent rgb(143, 132, 143);
           border-style: solid;
-          border-width: 25px 0px 25px 25px;
+          border-width: 6.5vw 0px 6.5vw 6.5vw;
           height: 0px;
           width: 0px;
         }
