--- a/tablet.css
+++ b/tablet.css
@@ -10,12 +10,12 @@
       }
       
       .wrapper{
-         display: flex;
+        display: flex;
         top: 0;
         left:0;
         margin: auto;
         width: 100vw;
-        /*max-width: 475px;*/
+        max-width: 100vw;
         height: 100vh;
         background-color: aquamarine;
         text-align: center;
@@ -25,10 +25,6 @@
         /* overflow: hidden; */
       }
        
-      .content {
-         width: 100%;
-      }
-   
       .header {
         display: none;
       }
@@ -40,23 +36,24 @@
       .footer {
         display: none;
       }
-      
+
       .menu {
         position: absolute;
         top: 0;
-        left: -65px;
-        width: 200px;
-        height: 40px;
+        left: -15vw;
+        width: 45vw;
+        height: 10vw;
         padding: 5px;
         background-color: rgb(252, 159, 38);
         transform: rotateZ(-45deg);
-        font-size: 1.5rem;
+        font-size: 6vw;
         z-index: 10;
+        cursor: pointer;
       }
       
       .info {
         position: absolute;
-        display: none;
+        display: block;
         width: 100vw;
         height: 100vh;
         background-color: white;
@@ -84,21 +81,21 @@
       }
       
       .title {
-      font-size: 2.75rem;
-      padding-top: 5rem;
-      padding-bottom: .25rem;
+      font-size: 10vw;
+      padding-top: 4.2rem;
+      /*padding-bottom: .25rem;*/
       /* background-color: thistle; */
       user-select: none;
       }  
-        /* Dropdown Button */
+       /* Dropdown Button */
        .dropbtn {
-          width: 100%;
+          width: 55vw;
           background-color: rgb(223, 109, 252);
           color: white;
-          margin-top: 60px;
+          margin-top: 8vw;
           /* margin-bottom: 16px; */
           padding: 8px;
-          font-size: 3.5rem;
+          font-size: 6vw;
           border: none;
           cursor: pointer;
           border-radius: 4px;
@@ -121,16 +118,18 @@
           left: 0;
           right: 0;
           margin: auto;
+          margin-top: 4px;
           display: none;
           position: absolute;
           background-color: rgb(223, 109, 252);
           font-size: 1.25rem;
-          max-width: 70%;
+          width: 200px;
+          height: 190%;
           /* width: auto; */
           /* min-width: 100px; */
           border-radius: 4px;
           box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-          z-index: 1;
+          z-index: 200;
         }
         
         /* Links inside the dropdown */
@@ -147,22 +146,7 @@
             background-color: rgb(204, 0, 255);
         }
         
-        .show::-webkit-scrollbar {/*custom scroll bar */
-      width: 1.25rem;
-      }
-
-      .show::-webkit-scrollbar-track {
-        border-radius: 6px; 
-        box-shadow: inset 0 0 6px gray;
-      }
-
-      .show::-webkit-scrollbar-thumb {
-        border-radius: 6px;
-        background-color: rgb(204, 0, 255);
-        /*outline: 1px solid slategray;*/ 
-      }
-
-     .show::-webkit-scrollbar {/*custom scroll bar */
+      .show::-webkit-scrollbar {/*custom scroll bar */
       width: 1.25rem;
       }
 
@@ -184,17 +168,16 @@
           box-shadow: 4px 2px 12px black;
       }
         
-        
         .vitamin {
-          margin-top: 16px;
-          /* width: 100vw; */
-          max-width: 400px;
+          margin-top: 5px;
+          width: 100vw;
+          /*max-width: 400px;*/
           text-align: center;
           /* border: 2px solid rgb(247, 81, 4);
           border-radius: 2px; */
         }
       
-        .day-controls {
+         .day-controls {
           display: flex;
           text-align: center;
           justify-content: center;
@@ -210,10 +193,11 @@
           margin-left: 5px;
           margin-right: 5px;
           /* margin-bottom: 20px; */
-          width: 220px;
-          max-width: 400px;
+          width: 60vw;
+          /*max-width: 400px;*/
+          height: 10vw;
           text-align: center;
-          font-size: 1.5rem;
+          font-size: 6vw;
           color: white;
           /* padding: .25rem; */
           padding-top: .25rem;
@@ -230,9 +214,10 @@
           top: 222px;
           border-color: transparent rgb(138, 111, 138);
           border-style: solid;
-          border-width: 25px 25px 25px 0px;
+          border-width: 6vw 6vw 6vw 0px;
           height: 0px;
           width: 0px;
+         cursor: pointer;
         }
       
         .left-arrow:hover {
@@ -242,7 +227,7 @@
           top: 222px;
           border-color: transparent rgb(143, 132, 143);
           border-style: solid;
-          border-width: 25px 25px 25px 0px;
+          border-width: 6.5vw 6.5vw 6.5vw 0px;
           height: 0px;
           width: 0px;
         }
@@ -296,9 +281,10 @@
           top: 222px;
           border-color: transparent rgb(138, 111, 138);
           border-style: solid;
-          border-width: 25px 0px 25px 25px;
+          border-width: 6vw 0px 6vw 6vw;
           height: 0px;
           width: 0px;
+         cursor: pointer;
         }
       
         .right-arrow:hover {
@@ -308,7 +294,7 @@
           top: 222px;
           border-color: transparent rgb(143, 132, 143);
           border-style: solid;
-          border-width: 25px 0px 25px 25px;
+          border-width: 6.5vw 0px 6.5vw 6.5vw;
           height: 0px;
           width: 0px;
         }
@@ -360,7 +346,7 @@
           flex-direction: column;
           justify-content: center;
           width: 100vw;
-          max-width: 400px;
+          /*max-width: 400px;*/
         }
       
         .front-content {
@@ -368,11 +354,13 @@
           right: 0;
           margin: auto;
           text-align: center;
-          width: 90%;
-          height: 28%;
-          min-height: 135px;
+          width: 90vw;
+          height: 35vw;
+          /*max-height: 160px;*/
+          /*min-height: 135px;*/
           /* padding: 5px; */
           margin-top: 10px;
+         margin-left: 5vw;
           /* margin-bottom: 20vh; */
           font-size: 3rem;
           color: rgb(0, 0, 0);
@@ -405,6 +393,7 @@
           border-radius: 50vw/50vw;
           white-space: pre-wrap; /*this will create a new line after the verse */
           box-shadow: 2px 2px 8px black;
+          z-index: 100;
         }
       
         .view {
@@ -426,19 +415,20 @@
         }
       
         .instructions h2 {
-          font-size: 1.25rem;
+          font-size: 5vw;
           font-weight: bold;
-          text-align: left;
-          text-indent: 150px;
+          text-align: center;
+          /*text-indent: 150px;*/
           line-height: .25;
           color: red;
+          margin-top: 10px;
         }
       
         .instructions p {
-          font-size: 1.15rem;
+          font-size: 4vw;
           font-weight: bold;
           text-align: left;
-          text-indent: 85px;
+          text-indent: 23vw;
           line-height: .25;
           color: red;
         }
@@ -446,44 +436,56 @@
         .sidebar {
           display: none;
         }
-   
-   .letter-button {
+
+        .letter-button {
           display: none;
           height: 100px;
           width: 75px;
           background: black;
-          position: absolute;
+          /*position: absolute;*/
           left: 0;
           right: 0;
           margin: auto;
-          bottom: 5px;
+          /*margin-top: 10px;*/
+          /*bottom: 30%;*/
           border-radius: 3px;
           box-shadow: 2px 2px 8px black;
           cursor: pointer;
         }
 
+        .bottle {
+          display: block;
+        }
+  
         .page {
-          height: 90px;
+          height: 90%;
           width: 65px;
           background: white;
-          position: absolute;
+          position: relative;
           left: 0;
           right: 0;
           top: 5px;
           margin: auto;
-          padding-top: 9px;
-          padding-bottom: 4px;
+          margin-top: 5px;
+          padding-top: 2px;
+          /* padding-bottom: 4px; */
           padding-left: 4px;
           padding-right: 4px;
           font-size: 2px;
           overflow: hidden;
         }
 
+        .page-title {
+          padding-top: 2px;
+          text-align: center;
+          font-size: 12px;
+        }
+
         .glass {
           display: none;
         }
+ }
 
-}
 /* ###########################################################################################################################################
  ########################################################################################################################################### */
 /* Medium devices (landscape tablets, 768px and up) */
