--- a/phone.css
+++ b/phone.css
@@ -19,12 +19,20 @@
         height: 100vh;
         background-color: aquamarine;
         text-align: center;
-        background-image: url("assets/bottle2.png");
+        /*background-image: url("assets/bottle2.png");
         background-repeat: no-repeat;
         background-size: contain;
-        /* overflow: hidden; */
+        overflow: hidden;*/
       }
        
+      .content {
+       background-image: url("assets/bottle2.png");
+       background-repeat: no-repeat;
+       background-size: contain;
+       overflow: hidden;
+       background-position: center;
+     }
+  
       .header {
         display: none;
       }
